운영 서버 로깅 추가